--- a/app/internal/transport/http/ui/static/css/style.css
+++ b/app/internal/transport/http/ui/static/css/style.css
@@ -6,6 +6,7 @@
     --oasis25: #fde4c325;
     --sesalt: #f6f6f6;
 }
+
 @media screen {
     *, ::after, ::before {
         box-sizing: border-box;
@@ -28,10 +29,13 @@
     }
 
     main {
+        opacity: 0;
         padding: 0 1rem;
         display: block;
-        gap: 1rem;
+        transition: 0.1s;
+        /*gap: 1rem;*/
     }
+
     section {
         display: flex;
         flex-direction: column;
@@ -40,6 +44,7 @@
         gap: 0.4rem;
         transition: 0.2s;
     }
+
     button {
         height: 2rem;
         color: var(--eerie-black);
@@ -48,18 +53,22 @@
         border-radius: 5px;
         transition: 0.2s;
     }
+
     button:disabled {
         color: var(--eerie-black);
         background-color: var(--oasis25);
     }
+
     button:enabled:active {
         color: var(--sesalt);
     }
+
     input {
         appearance: none;
         display: none;
         z-index: 100;
     }
+
     label {
         height: 2rem;
         display: flex;
@@ -77,24 +86,50 @@
     sup {
         height: 100%;
     }
+
     a {
         transition: 0.2s;
         text-decoration: none;
         color: var(--coyote);
     }
+
+    .loader {
+        position: absolute;
+        display: none;
+        top: calc(50vh - 0.5rem);
+        left: calc(50vw - 0.5rem);
+        /*transform: translate(-50%, -50%);*/
+        height: 1rem;
+        width: 1rem;
+        border: 2px solid var(--sesalt);
+        border-bottom-color: transparent;
+        border-top-color: transparent;
+        border-radius: 0.5rem;
+        opacity: 50%;
+        animation: rotating 1s infinite linear;
+    }
+
+    @keyframes rotating {
+        100% {
+            transform: rotate(360deg);
+        }
+    }
     .logo {
         margin: auto 1rem;
 
     }
+
     .header_chord {
-        margin-left: 50px ;
+        margin-left: 50px;
         color: var(--sesalt);
         font-weight: bold;
     }
+
     .base_container {
         display: flex;
         align-items: end;
     }
+
     .refresh {
         background: none;
         border: none;
@@ -109,6 +144,7 @@
         height: 30px;
         width: 300px;
     }
+
     .fret_label {
         display: block;
         position: relative;
@@ -123,6 +159,7 @@
         width: 300px;
         height: 175px;
     }
+
     .svg-container {
         position: absolute;
         top: 15px;
@@ -139,6 +176,7 @@
         height: 150px;
         z-index: 10;
     }
+
     .string, .saddle, .fret {
         fill: none;
         stroke: var(--oasis);
@@ -152,6 +190,7 @@
     .saddle {
         stroke-width: 4px;
     }
+
     .fret {
         stroke-width: 1px;
     }
@@ -172,24 +211,29 @@
         position: relative;
         z-index: 100;
     }
+
     .fingers_container {
         position: absolute;
         width: inherit;
         z-index: 50;
     }
+
     .finger {
         fill: var(--sesalt);
     }
+
     .open {
         fill: none;
         stroke: var(--sesalt);
         stroke-width: 2px;
     }
+
     .muted {
         fill: none;
         stroke: var(--redwood);
         stroke-width: 2px;
     }
+
     .finger, .open, .muted {
         transition: 0.2s;
         opacity: 0;
@@ -207,14 +251,17 @@
         width: 50px;
         font-size: 0.8rem
     }
+
     .capo_input:checked + .capo_label {
         color: var(--oasis)
     }
+
     .fret_numbers {
         display: flex;
         width: 250px;
         height: 2rem;
     }
+
     .fret_number {
         display: flex;
         width: 50px;
@@ -224,14 +271,17 @@
         color: var(--oasis);
         transition: 0.2s;
     }
+
     .fret_meter {
         display: none;
     }
+
     .fret_meter_control {
         position: absolute;
         display: flex;
         z-index: 100;
     }
+
     .meter_btn {
         display: flex;
         opacity: 0;
@@ -243,16 +293,20 @@
         border: none;
         transition: 0.2s;
     }
+
     #right {
         justify-content: right;
     }
+
     #left {
         justify-content: left;
     }
+
     .nav_left {
         position: relative;
         right: 0.4rem
     }
+
     .nav_right {
         position: relative;
         left: 0.4rem;
@@ -273,6 +327,7 @@
         width: inherit;
         flex: 4 0 auto;
     }
+
     .var {
         padding: 0 1rem;
         display: none;
@@ -284,6 +339,7 @@
         display: flex;
         gap: 0.4rem;
     }
+
     .choice_btn {
         flex: 1 0 0;
     }
@@ -314,44 +370,51 @@
         justify-content: center;
         align-items: center;
     }
+
     .download {
         height: 2rem;
     }
+
     .content {
         display: flex;
     }
+
     code {
         padding: 1rem;
         color: var(--sesalt);
         font-family: Monospaced, monospace;
         font-size: 1.2rem;
     }
+
     .result {
         margin-bottom: 0.5rem;
         max-width: 300px;
     }
+
     .hidden {
         opacity: 0;
         height: 0;
     }
+
     .visible {
         display: flex;
         opacity: 100%;
     }
 
-}
-footer {
-    margin-top: auto;
-    margin-bottom: 1rem;
-    display: flex;
-    gap: 0.5rem;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 0.8rem;
-}
-.footer {
-    display: flex;
-    gap: 0.4rem;
-    margin: 0 auto;
-    color: var(--oasis25);
+    footer {
+        margin-top: auto;
+        margin-bottom: 1rem;
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 0.8rem;
+    }
+
+    .footer {
+        display: flex;
+        gap: 0.4rem;
+        margin: 0 auto;
+        color: var(--oasis25);
+    }
 }
